[gd_scene load_steps=3 format=3 uid="uid://vgmja1g5tgtf"]

[ext_resource type="Script" path="res://scenes/card.gd" id="1_ffpka"]
[ext_resource type="Texture2D" uid="uid://fmc5dhc4mamm" path="res://images/cards/King.jpg" id="3_q0xll"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 192.0
offset_bottom = 192.0
pivot_offset = Vector2(96, 96)
size_flags_vertical = 4
script = ExtResource("1_ffpka")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 176.0
offset_bottom = 184.0
color = Color(0.262745, 0.121569, 0.0509804, 1)

[node name="CardImage" type="Sprite2D" parent="."]
position = Vector2(96, 96)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q0xll")

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CardName" type="Label" parent="Container"]
layout_mode = 2
offset_top = 72.0
offset_right = 192.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="NbUnits" type="Label" parent="Container"]
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
